# dlib

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/syx/face/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/dlib1919/dlib/dnn/: layers.h
app/src/main/cpp/glog/: logging.h
app/src/main/cpp/jni_common/: jni_primitives.h
app/src/main/cpp/jni_detections/: detector.h  jni_face_det.cpp  jni_imageutils.cpp  jni_pedestrian_det.cpp
app/src/main/java/com/syx/dlib/: Constants.java  FaceDet.java  FaceRecognize.java  PedestrianDet.java  VisionDetRet.java
app/src/main/java/com/syx/face/: MainActivity.java  MainActivityCamera.java
app/src/main/java/org/opencv/samples/facedetect/: FdActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/syx/face/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencv420sdk/: build.gradle
